Refactor/organize Disambiguate class